# Landing-Gear-Project

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TESTING.md  example_input.json  example_output.json  example_output_with_tires.json  pretty_example_output.py  pretty_output_with_tires.py  pyproject.toml  requirements.txt  sweep_output.json
.github/workflows/: ci.yml  release.yml
data/: README.md
gearrec/: __init__.py  __main__.py
gearrec/api/: __init__.py  server.py
gearrec/cli/: __init__.py  main.py  readable_output.py
gearrec/data/: __init__.py  goodyear_2022_applications.json  goodyear_2022_tires.json
gearrec/generator/: __init__.py  candidates.py
gearrec/models/: __init__.py  inputs.py  outputs.py
gearrec/physics/: __init__.py  energy.py  geometry.py  loads.py  tire_catalog.py  units.py
gearrec/scoring/: __init__.py  scorer.py
gearrec/tire_catalog/: __init__.py  import_goodyear_2022.py  loader.py  matcher.py  models.py
packaging/pyinstaller/: gearrec.spec
scripts/: build_exe.ps1  build_exe.sh  bump_version.py
tests/: __init__.py  conftest.py  test_api.py  test_generator.py  test_models.py  test_physics.py  test_tire_catalog.py
