[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gearrec"
dynamic = ["version"]
description = "Landing Gear Recommender - Conceptual sizing tool for aircraft landing gear"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Landing Gear Project", email = "contact@example.com"}
]
keywords = ["aircraft", "landing-gear", "aerospace", "engineering", "sizing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pydantic>=2.5.0",
    "pint>=0.23",
    "click>=8.1.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pdfplumber>=0.10.0",
]

[project.optional-dependencies]
pdf = [
    "pdfplumber>=0.10.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "pdfplumber>=0.10.0",
    "pyinstaller>=6.3.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
gearrec = "gearrec.cli.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["gearrec*"]

[tool.setuptools.package-data]
gearrec = ["data/*.json"]

[tool.setuptools.dynamic]
version = {attr = "gearrec.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

